<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>cameras</name>
  <version>1.2.4</version>
  <description> Pkg container of useful ROS1 files to enable common smart cameras</description>
  <maintainer email="italo.almirante@unimore.it">Italo Almirante</maintainer>
  <license>Apache License 2.0</license>

  <url>http://ros.org/wiki/foo_core</url>
  <author>Italo Almirante</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ar_track_alvar </depend>
  <depend>cables_detection </depend>
  <depend>cv_bridge </depend>
  <depend>fiducial_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs </depend>
  <depend>std_msgs</depend>

  <export>

  </export>

</package>
